main/default/objects/Stage_solution__c/Stage_solution__c.object-meta.xml
<CustomObject>
    <label>Stage (solution)</label>
    <nameField>
        <label>Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stages (solution)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>