main/default/objects/Stage_solution__c/fields/Crowd_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Crowd_Capacity__c</fullName>
    <description>How many people can comfortably fit at this stage.</description>
    <label>Crowd Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>