main/default/objects/Stage_solution__c/fields/Festival__c.field-meta.xml
<CustomField>
    <fullName>Festival__c</fullName>
    <label>Festival</label>
    <referenceTo>Festival_solution__c</referenceTo>
    <relationshipLabel>Stages (solutions)</relationshipLabel>
    <relationshipName>Stages_solutions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>