main/default/objects/Stage_solution__c/fields/Main_Stage__c.field-meta.xml
<CustomField>
    <fullName>Main_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be checked if this is the main stage.</description>
    <label>Main Stage</label>
    <type>Checkbox</type>
</CustomField>