main/default/objects/Stage_solution__c/fields/Needs_Piano__c.field-meta.xml
<CustomField>
    <fullName>Needs_Piano__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box will be checked if the stage requires a piano for their bands.</description>
    <label>Needs Piano</label>
    <type>Checkbox</type>
</CustomField>