main/default/objects/Stage_solution__c/fields/Special_Installs__c.field-meta.xml
<CustomField>
    <fullName>Special_Installs__c</fullName>
    <description>Any special installation requests for this particular stage</description>
    <label>Special Installs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lasers</fullName>
            </value>
            <value>
                <fullName>Smoke Machines</fullName>
            </value>
            <value>
                <fullName>Pyrotechnics</fullName>
            </value>
            <value>
                <fullName>Art Installation</fullName>
            </value>
            <value>
                <fullName>Extra Subwoofers</fullName>
            </value>
            <value>
                <fullName>Multiple Drumsets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>