main/default/objects/Stage_solution__c/fields/Stage_Manager__c.field-meta.xml
<CustomField>
    <fullName>Stage_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Runs and handles all things related to the stage.</description>
    <label>Stage Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Stages (solutions)</relationshipLabel>
    <relationshipName>Stages_solutions</relationshipName>
    <type>Lookup</type>
</CustomField>